@@ -1,5 +1,10 @@
 2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
+	* gtksourceview/gtksourceview.c:
+	Load GtkSourceCompletion only when requested.
+
+2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
 	* gtksourceview/gtksourcecompletiontriggerkey.h:
 	* gtksourceview/Makefile.am:
 	* gtksourceview/gtksourcecompletiontriggerkey.c:
